--- a/emotions-project/src/app/features/result/result.component.html
+++ b/emotions-project/src/app/features/result/result.component.html
@@ -1,1 +1,180 @@
-<p>resultpage works!</p>
+<div class="wrapper">
+  <div class="container">
+
+      <div class="hexagon-area hexagon-area--first">
+          <div class="hexagon-area__hexagon">Joy</div>
+          <div class="hexagon-area__hexagon">Surprise</div>
+      </div>
+
+      <div class="hexagon-area">
+          <div class="hexagon-area__hexagon">Anger</div>
+          <div class="hexagon-area__hexagon hexagon-area__hexagon--middle">Emotions</div>
+          <div class="hexagon-area__hexagon">Disgust</div>
+      </div>
+
+      <div class="hexagon-area hexagon-area--last">
+          <div class="hexagon-area__hexagon">Fear</div>
+          <div class="hexagon-area__hexagon">Sadness</div>
+      </div>
+
+
+
+
+
+      <div class="hexagon-area-description hexagon-area-description--joy">
+
+          <div class="hexagon-area hexagon-area--top">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Amused</span>
+                  <span>Delighted</span>
+                  <span>Excited</span>
+              </div>
+          </div>
+
+          <div class="hexagon-area">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Enthralled</span>
+                  <span>Rapturous</span>
+                  <span>Elated</span>
+              </div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Satisfied</span>
+                  <span>Proud</span>
+              </div>
+          </div>
+
+      </div>
+
+
+      <div class="hexagon-area-description hexagon-area-description--surpraise">
+
+          <div class="hexagon-area hexagon-area--top">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Shocked</span>
+                  <span>Stunned</span>
+                  <span>Startled</span>
+              </div>
+          </div>
+
+          <div class="hexagon-area">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Amazed</span>
+                  <span>Awestruck</span>
+                  <span>Astouned</span>
+              </div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Confused</span>
+                  <span>Perplexed</span>
+              </div>
+          </div>
+
+      </div>
+
+
+
+      <div class="hexagon-area-description hexagon-area-description--anger">
+
+          <div class="hexagon-area hexagon-area--top">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Enraged</span>
+                  <span>Mad</span>
+                  <span>Furious</span>
+              </div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Resentful</span>
+                  <span>Jealous</span>
+                  <span>Envious</span>
+              </div>
+          </div>
+
+          <div class="hexagon-area">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Humiliated</span>
+                  <span>Exasperated</span>
+              </div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Frustrated</span>
+                  <span>Annoyed</span>
+              </div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small hexagon-area__hexagon--hidden"></div>
+          </div>
+
+      </div>
+
+
+     <div class="hexagon-area-description hexagon-area-description--disgust">
+
+          <div class="hexagon-area hexagon-area--top">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Contempt</span>
+                  <span>Hatred</span>
+              </div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Revolted</span>
+                  <span>Repulsed</span>
+              </div>
+          </div>
+
+          <div class="hexagon-area">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small hexagon-area__hexagon--hidden"></div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Guilty</span>
+                  <span>Regretful</span>
+                  <span>Ashamed</span>
+              </div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Disapproving</span>
+                  <span>Appalled</span>
+              </div>
+          </div>
+
+      </div>
+
+
+      <div class="hexagon-area-description hexagon-area-description--fear">
+
+          <div class="hexagon-area hexagon-area--top">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Mortified</span>
+                  <span>Embarrassed</span>
+                  <span>Scared</span>
+              </div>
+          </div>
+
+          <div class="hexagon-area">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small hexagon-area__hexagon--hidden"></div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Frightened</span>
+                  <span>Terrified</span>
+                  <span>Horrified</span>
+              </div>
+          </div>
+
+      </div>
+
+
+      <div class="hexagon-area-description hexagon-area-description--sadness">
+
+          <div class="hexagon-area hexagon-area--top">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Lonely</span>
+                  <span>Disappointed</span>
+              </div>
+          </div>
+
+          <div class="hexagon-area">
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Excluded</span>
+                  <span>Displeased</span>
+                  <span>Dismayed</span>
+              </div>
+              <div class="hexagon-area__hexagon hexagon-area__hexagon--small">
+                  <span>Gried</span>
+                  <span>Anguish</span>
+                  <span>Despair</span>
+              </div>
+          </div>
+
+      </div>
+  </div>
+</div>
