--- a/emotions-project/src/app/shared/card/card.component.html
+++ b/emotions-project/src/app/shared/card/card.component.html
@@ -1,8 +1,6 @@
-<div class="container" 
-[ngClass]="color ? 'container--big' : 'container--small'"
->
+<div class="container" [ngClass]="color ? 'container--big' : 'container--small'">
   <div class="container__img">
-    <img class="container__image" src="{{imgSrc}}" alt="logo">
+    <img class="container__image" [ngClass]="color ? '' : 'container__image--small'" src="{{imgSrc}}" alt="logo">
   </div>
   <div class="container__text" [ngClass]="color">
     <div class="container__header">
