--- a/emotions-project/src/app/shared/spinner/spinner.component.scss
+++ b/emotions-project/src/app/shared/spinner/spinner.component.scss
@@ -1,12 +1,12 @@
 .spinner {
     visibility: visible;
-    width: 50px;
-    height: 50px;
-    border: 2px solid rgb(255, 255, 255);
-    border-top: 3px solid rgb(181, 241, 189);
+    width: 120px;
+    height: 120px;
+    border: 2px solid rgb(113, 221, 180);
+    border-top: 3px solid rgb(64, 64, 115);
     border-radius: 100%;
     position: absolute;
-    top: 0;
+    top: 62%;
     bottom: 0;
     left: 0;
     right: 0;
