--- a/emotions-project/src/app/shared/footer/footer.component.scss
+++ b/emotions-project/src/app/shared/footer/footer.component.scss
@@ -3,6 +3,8 @@ footer {
   min-height: 25vh;
   color: white;
   background-color: rgb(64, 64, 115);
+  position: sticky;
+  bottom: 0;
 }
 
 .container {
