--- a/emotions-project/src/app/shared/recommendation/recommendation.component.html
+++ b/emotions-project/src/app/shared/recommendation/recommendation.component.html
@@ -2,5 +2,5 @@
     <p class="container__type">{{recommendation.type}}</p>
     <img class="container__logo" [src]="recommendation.icon" alt="icon">
     <div class="container__description">{{recommendation.description}}</div>
-    <a class="container__link" [href]="recommendation.link">Open training</a>
+    <a class="container__link" [href]="recommendation.link" target="_blank">Open training</a>
 </div>
