--- a/emotions-project/src/app/shared/recommendation/recommendation.component.scss
+++ b/emotions-project/src/app/shared/recommendation/recommendation.component.scss
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 20vw;
+  text-align: center;
+  font-size: 1em;
+  width: 50vw;
+  min-height: 300px;
   color: rgb(64, 64, 115);
   background-color: rgb(113, 221, 180);
   padding: 40px;
@@ -11,6 +14,7 @@
   &__type {
     font-size: 24px;
     font-weight: 700;
+    text-transform: capitalize;
   }
 
   &__logo {
@@ -19,7 +23,7 @@
 
   &__description {
     margin: 20px 0;
-    text-align: center;
+    flex: 1 0 0;
   }
 
   &__link {
@@ -35,5 +39,17 @@
       color: white;
       cursor: pointer;
     }
+  }
+}
+
+@media (min-width:720px) {
+  .container {
+    width: 25vw;
+  }
+}
+
+@media (min-width:1024px) {
+  .container {
+    width: 15vw;
   }
 }
