--- a/emotions-project/src/app/features/home/home.component.html
+++ b/emotions-project/src/app/features/home/home.component.html
@@ -5,7 +5,7 @@
     <h1 class="container__header">Get to know yourself.</h1>
     <p class="container__paragraf">With this personality test, you will find out what personality type you are.
     </p>
-    <app-button title="Start the test" classes="btn btn__secondary" routerLink="/test"></app-button>
+    <app-button title="Start the test" classes="btn btn__secondary" routerLink="/quizzes"></app-button>
   </div>
 </div>
 <div class="container__card">
@@ -50,5 +50,5 @@
 </div>
 
 <div class="btn">
-  <app-button title="Start the test" classes="btn btn__primary" routerLink="/test"></app-button>
+  <app-button title="Start the test" classes="btn btn__primary" routerLink="/quizzes"></app-button>
 </div>
