--- a/emotions-project/src/app/app.component.html
+++ b/emotions-project/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
-<div class="placeholder">
-  <div class="inner-placeholder">
+<div class="container">
+  <main>
     <router-outlet></router-outlet>
-  </div>
+  </main>
   <app-footer></app-footer>
 </div>
