--- a/emotions-project/src/app/app.component.scss
+++ b/emotions-project/src/app/app.component.scss
@@ -1,10 +1,9 @@
-.placeholder {
+.container {
   display: flex;
   flex-flow: column;
   height: calc(100vh - 110px);
 }
-
-.inner-placeholder {
+main {
   flex: 1;
 }
 
