added spinner and changed design of quizzes

--- a/emotions-project/src/app/shared/spinner/spinner.component.scss
+++ b/emotions-project/src/app/shared/spinner/spinner.component.scss
@@ -6,7 +6,7 @@
     border-top: 3px solid rgb(64, 64, 115);
     border-radius: 100%;
     position: absolute;
-    top: 62%;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
