--- a/emotions-project/src/app/features/quizz/quizz.component.scss
+++ b/emotions-project/src/app/features/quizz/quizz.component.scss
@@ -6,15 +6,30 @@
 
   &__quizzes {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  &__quizz {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 40vw;
-    height: 100px;
+    width: 200px;
+    height: 300px;
     background-color: rgb(113, 221, 180);
     margin: 20px;
     text-align: center;
     cursor: pointer;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
+  &__icon {
+    width: 80px;
+    margin: 20px 0;
   }
 
   &__text {
