--- a/emotions-project/src/app/features/test/test.component.html
+++ b/emotions-project/src/app/features/test/test.component.html
@@ -26,7 +26,7 @@
           </div>
         </div>
       </ng-container>      
-      <div  *ngIf="isSubmited && testForm.invalid" class="container__error">
+      <div  *ngIf="isSubmited && testForm?.invalid" class="container__error">
         Please answer all the questions above!
       </div>
       <div class="container__button" *ngIf="isVisible">
