--- a/emotions-project/src/app/features/result/result.component.html
+++ b/emotions-project/src/app/features/result/result.component.html
@@ -1,3 +1,6 @@
+<div class="container-title" *ngIf="isVisible">
+  Your test results
+</div>
 <app-emotion-map [result] = "result"></app-emotion-map>
 <div class="container-title" *ngIf="isVisible">
   Recommendations
