--- a/emotions-project/src/app/shared/footer/footer.component.scss
+++ b/emotions-project/src/app/shared/footer/footer.component.scss
@@ -12,6 +12,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
 
   &__logo {
