--- a/emotions-project/src/app/features/result/result.component.scss
+++ b/emotions-project/src/app/features/result/result.component.scss
@@ -1,9 +1,16 @@
-.container-title {
+.container {
   text-align: center;
-  font-weight: 700;
-  font-size: 42px;
-  margin: 10px;
   color: rgb(64, 64, 115);
+
+  &__title {
+    font-weight: 700;
+    font-size: 42px;
+    margin: 10px;
+  }
+
+  &__text {
+    font-size: 20px;
+  }
 }
 
 app-recommendation-list {
