added unit tests

--- a/emotions-project/src/app/shared/emotion-map/emotion-map.component.scss
+++ b/emotions-project/src/app/shared/emotion-map/emotion-map.component.scss
@@ -32,12 +32,12 @@
     visibility: hidden;
 
     &--1 {
-      @include rhombus-left;
+      @include rhombus-top--left;
       transform: translate(-95px, -152px);
     }
 
     &--2 {
-      @include rhombus-right;
+      @include rhombus-top--right;
       transform: translate(40px, -152px);
     }
 
