--- a/emotions-project/src/styles/mixins.scss
+++ b/emotions-project/src/styles/mixins.scss
@@ -70,6 +70,32 @@
   }
 }
 
+@mixin rhombus-top--right() {
+  display: grid;
+  grid-template-columns: repeat(5, 55px);
+  grid-template-rows: repeat(2, 80px);
+  justify-content: center;
+  place-items: center;
+  font-size: 12px;
+  left: 0;
+
+  & > *:nth-child(1) {
+    grid-area: 2 / 2 / 2 / 4;
+  }
+
+  & > *:nth-child(2) {   
+    grid-area: 1 / 1 / 1 / 3;
+  }
+
+  & > *:nth-child(3) {
+    grid-area: 1 / 3 / 1 / 5;
+  }
+
+  & > *:nth-child(4) {
+    grid-area: 2 / 4 / 2 / 6;
+  }
+}
+
 @mixin rhombus-left() {
   display: grid;
   grid-template-columns: repeat(5, 55px);
@@ -85,6 +111,33 @@
 
   & > *:nth-child(2) {
     grid-area: 2 / 4 / 2 / 6;
+  }
+
+  & > *:nth-child(3) {
+    grid-area: 2 / 2 / 2 / 4;
+  }
+
+  & > *:nth-child(4) {
+    grid-area: 1 / 1 / 1 / 3;
+
+  }
+}
+
+@mixin rhombus-top--left() {
+  display: grid;
+  grid-template-columns: repeat(5, 55px);
+  grid-template-rows: repeat(2, 80px);
+  justify-content: center;
+  place-items: center;
+  font-size: 12px;
+  right: 0;
+
+  & > *:nth-child(1) {
+    grid-area: 2 / 4 / 2 / 6;
+  }
+
+  & > *:nth-child(2) {    
+    grid-area: 1 / 3 / 1 / 5;
   }
 
   & > *:nth-child(3) {
